--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=SWE
+spring.application.name=Flogin
+
+# Active Profile
+spring.profiles.active=local
+
+# Server Configuration
+server.port=8080
