source using for security testing, reports in folder: ./security_test/.Reports

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,9 @@ secrets/
 docs/_build/
 site/
 backend/src/main/resources/database/
+security_test/app-config.properties
+security_test/*/*.pyc
+
+__pycache__/
+**/__pycache__/
+
