--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^30.2.0",
     "eslint": "^9.15.0",
