--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,51 @@
         <spring-modulith.version>1.4.4</spring-modulith.version>
     </properties>
     <dependencies>
+
+    
+    
+
+        <!-- Selenium  cai dat-->
+        
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        
+    </dependency>
+    <!-- WebDriverManager: tự quản lý ChromeDriver -->
+   <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>5.8.0</version>
+        
+    </dependency>
+    
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <scope>test</scope>
+    </dependency>
+
+    <!-- MySQL Driver -->
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        
+    </dependency>
+
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-firefox-driver</artifactId> 
+    </dependency>
+
+
+    
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -76,6 +121,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mariadb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>  <!-- Chỉ cho test, không ảnh hưởng production -->
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -157,6 +212,25 @@
                 </configuration>
             </plugin>
             <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                            <version>3.2.5</version>
+                    <configuration>
+                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                            <useFile>true</useFile>
+                        <printSummary>true</printSummary>
+                    </configuration>
+            </plugin>
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <mainClass>org.selenium.LoginTest</mainClass>
+                 <classpathScope>test</classpathScope>
+            </configuration>
+        </plugin>
+            <plugin>
                 <groupId>io.github.deweyjose</groupId>
                 <artifactId>graphqlcodegen-maven-plugin</artifactId>
                 <version>1.61.5</version>
@@ -201,15 +275,16 @@
                 <artifactId>native-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-contract-maven-plugin</artifactId>
-                <version>4.3.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <testFramework>JUNIT5</testFramework>
-                    <testMode>WEBTESTCLIENT</testMode>
-                    <failOnNoContracts>false</failOnNoContracts>
-                </configuration>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-contract-maven-plugin</artifactId>
+    <version>4.3.0</version>
+    <extensions>true</extensions>
+    <configuration>
+        <testFramework>JUNIT5</testFramework>
+        <testMode>WEBTESTCLIENT</testMode>
+        <contractsDirectory>src/test/resources/contracts</contractsDirectory>  <!-- Thêm path rõ ràng -->
+        <failOnNoContracts>false</failOnNoContracts>
+    </configuration>
             </plugin>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
