--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,40 @@
-spring.application.name=Flogin
-
-# Active Profile
-spring.profiles.active=local
-
+# ===============================
 # Server Configuration
+# ===============================
 server.port=8080
+spring.application.name=LaptopStoreApp
+
+# ===============================
+# Datasource Configuration
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/swt?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=1234567890
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# ===============================
+# Logging Configuration
+# ===============================
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# Optional: Thymeleaf / Templates
+# ===============================
+spring.thymeleaf.cache=false
+
+# ===============================
+# Security (optional)
+# ===============================
+# Uncomment if you want to disable security for testing
+# spring.security.user.name=admin
+# spring.security.user.password=0123456789
