--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,8 +33,6 @@
     </properties>
     <dependencies>
 
-    
-    
 
         <!-- Selenium  cai dat-->
         
@@ -76,6 +74,10 @@
 
 
     
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
