--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -101,11 +101,11 @@
         </dependency>
         
         <!-- MariaDB Driver -->
-        <dependency>
+        <!-- <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
         
         <!-- Password Encoding -->
         <dependency>
@@ -179,6 +179,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+    
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot</artifactId>
+      </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
