--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,8 +1,8 @@
 # Datasource
 spring.datasource.url=jdbc:h2:mem:swtdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=1234567890
 
 # Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 # H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=truespring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
