--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -1,18 +1,20 @@
-# Datasource
+# Datasource (H2 in-memory for tests)
 spring.datasource.url=jdbc:h2:mem:swtdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=1234567890
+spring.datasource.username=sa
+spring.datasource.password=
 
 # Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-# H2 Console
+# H2 Console (test-only)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=truespring.sql.init.mode=always
+# Do not run main schema/data SQL scripts (they contain MySQL-specific syntax)
+# Let Hibernate create the schema for H2 tests
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
