--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,5 @@
 # ===============================
 # Server Configuration
 # ===============================
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/swt?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234567890
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# Ensure SQL init scripts like data.sql run for non-embedded (MySQL) databases during dev
-# For production, consider using a migration tool (Flyway/Liquibase) instead
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+# Active profile
+spring.profiles.active=local
